--- a/index.html
+++ b/index.html
@@ -1,18 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Spotify Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <div class="navbar">
+    <a href="/home">
+      <img src="./images/spotify-logo.png" alt="logo" />
+    </a>
+    <nav>
+
+      <a href="/home">Premium</a>
+      <a href="/home">Discover</a>
+      <a href="/home">Help</a>
+      <a href="/home">Download</a>
+
+
+    </nav>
+  </div>
+
+  <section class="header-main">
+    <div>
+      <h1>
+        Music for everyone.
+      </h1>
+      <p>
+        Spotify is now free on mobile, tablet and computer. Listen to the
+        right music, wherever you are.
+      </p>
+    </div>
+
+
+  </section>
+  <section class="feature">
+    <h2>What’s on Spotify? </h2>
+    <div class="feature-card">
+
+      <div class="card">
+        <img src="./images/music-icon.png" alt="">
+        <p>Millions of Songs</p>
+        <span>There are millions of songs on Spotify</span>
+      </div>
+      <div class="card">
+        <img src="./images/high-quality-icon.png" alt="">
+        <p>HD Music</p>
+        <span> Listen to music as if you were listening live</span>
+      </div>
+      <div class="card">
+        <img src="./images/devices-icon.png" alt="">
+        <p>Stream Everywhere </p>
+        <span> Stream music on your smartphone, tablet or computer</span>
+      </div>
+    </div>
+  </section>
+  <section class="music-feature">
+
+    <div class="spotify-card">
+      <h3> It’s as yeezy as Kanye West.</h3>
+      <div class="spotify-card-app">
+
+        <div class="app-card">
+          <div class="card">
+            <p>Search</p>
+            <span>
+              Know what you want to listen to?
+              Just search and hit play.</span>
+
+          </div>
+
+          <div class="card">
+            <p>Browse</p>
+            <span> Check out the
+              latest charts, brand new releases and great playlists for right now.</span>
+
+
+          </div>
+          <div class="card">
+            <p>Discover</p>
+            <span> Enjoy new music every Monday with your
+              own personal playlist. Or sit back and enjoy Radio.</span>
+
+
+          </div>
+        </div>
+        <img src="./images/spotify-icon-white.png" alt="" />
+      </div>
+    </div>
+    <div class="spotify-app">
+      <img src="./images/spotify-app.jpg" alt="">
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
+</body>
+
 </html>
